Small fixes for better readability, + add index.html for 4 and 5

--- a/lab05/Task3/style.css
+++ b/lab05/Task3/style.css
@@ -31,12 +31,3 @@ ul.menu > li > ul > li {
     font-weight: normal;
     border: none;
 }
-
-ul.menu > li > ul {
-    display: none;
-}
-
-
-ul.menu > li:hover > ul {
-    display: block;
-}
